apps/jellyseer/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyseer
  name: jellyseer
  namespace: media
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 5055
      protocol: TCP
      targetPort: 5055
  selector:
    app: jellyseer
  sessionAffinity: None
  type: ClusterIP
