apps/jellyseer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: "videoteka.home.arpa"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jellyseer
                port:
                  number: 5055
